14 questions completed chp 14-16

--- a/Question no. 11/index.html
+++ b/Question no. 11/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Question no. 7</title>
+    <title>Question no. 11</title>
     <style>
       body {
-        background-color: darkseagreen;
-        color: rebeccapurple;
+        background-color: black;
+        color: red;
       }
       p {
         font-size: 25px;
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <script src="./question7.js"></script>
+    <script src="./question11.js"></script>
   </body>
 </html>
