--- a/Question no. 3/index.html
+++ b/Question no. 3/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Question no. 3</title>
     <style>
-        body {
-            background-color: burlywood;
-            color: blue;
-        }
+      body {
+        background-color: burlywood;
+        color: blue;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        document.write ("<h1>  Declare and initialize a strings array. </h1>")
+      document.write("<h1>  Declare and initialize a strings array. </h1>");
 
-        var carsCompanies = ["Honda", "Toyota", "Suzuki", "Changan"]
+      var carsCompanies = ["Honda", "Toyota", "Suzuki", "Changan"];
 
-        console.log (carsCompanies)
+      console.log(carsCompanies);
     </script>
-</body>
+  </body>
 </html>
