--- a/Question no. 4/index.html
+++ b/Question no. 4/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Question no. 4</title>
     <style>
-        body {
-            background-color: yellowgreen;
-            color: blueviolet;
-        }
+      body {
+        background-color: yellowgreen;
+        color: blueviolet;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        document.write ("<h1> Declare and initialize a numbers array. </h1>")
-        var number = [5, 8, 2, 0, 7]
-        console.log (number)
+      document.write("<h1> Declare and initialize a numbers array. </h1>");
+      var number = [5, 8, 2, 0, 7];
+      console.log(number);
     </script>
-</body>
+  </body>
 </html>
