--- a/Question no. 5/index.html
+++ b/Question no. 5/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Question no. 5</title>
     <style>
-        body {
-            background-color: slategray;
-            color: aqua;
-        }
+      body {
+        background-color: slategray;
+        color: aqua;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        document.write ("<h1> Declare and initialize a boolean array. </h1>")
-        var booleanArray = [true, false, true]
-        console.log (booleanArray)
+      document.write("<h1> Declare and initialize a boolean array. </h1>");
+      var booleanArray = [true, false, true];
+      console.log(booleanArray);
     </script>
-</body>
+  </body>
 </html>
