--- a/Question no. 9/index.html
+++ b/Question no. 9/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Question no. 9</title>
     <style>
-        body {
-            background-color: greenyellow;
-            color: blueviolet;
-        }
-        p {
-            font-size: 20px;
-            color: crimson;
-        }
+      body {
+        background-color: greenyellow;
+        color: blueviolet;
+      }
+      p {
+        font-size: 20px;
+        color: crimson;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <script src="./question9.js"></script>
-</body>
+  </body>
 </html>
