--- a/Question no. 10/index.html
+++ b/Question no. 10/index.html
@@ -3,19 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Question no. 7</title>
+    <title>Question no. 10</title>
     <style>
       body {
-        background-color: darkseagreen;
-        color: rebeccapurple;
+        background-color: skyblue;
+        color: purple;
       }
       p {
         font-size: 25px;
-        font-family: sans-serif, serif;
       }
     </style>
   </head>
   <body>
-    <script src="./question7.js"></script>
+    <script src="./question10.js"></script>
   </body>
 </html>
