--- a/Question no. 6/index.html
+++ b/Question no. 6/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Question no. 6</title>
     <style>
-        body {
-            background-color: darkgoldenrod;
-            color: brown;
-        }
+      body {
+        background-color: darkgoldenrod;
+        color: brown;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        document.write ("<h1> Declare and initialize a mixed array.</h1>")
+      document.write("<h1> Declare and initialize a mixed array.</h1>");
 
-        var mixedArray = ["Letter", 6, true, "Letter2", false, 133]
-        console.log (mixedArray)
+      var mixedArray = ["Letter", 6, true, "Letter2", false, 133];
+      console.log(mixedArray);
     </script>
-</body>
+  </body>
 </html>
