--- a/Question no. 8/index.html
+++ b/Question no. 8/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Question no. 8</title>
     <style>
-        body {
-            background-color: violet;
-            color: chartreuse;
-        }
-        p {
-            font-size: 25px;
-        }
+      body {
+        background-color: violet;
+        color: chartreuse;
+      }
+      p {
+        font-size: 25px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <script src="./question8.js"></script>
-</body>
+  </body>
 </html>
