--- a/index.html
+++ b/index.html
@@ -4,24 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Assignments chp 14 - 16</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>JavaScript Assignment 5 (Chp 14 - 16)</h1>
-    <div>
-      <a href="./Question no. 1/index.html" target="_blank">Question no. 1</a>
-      <a href="./Question no. 2/index.html" target="_blank">Question no. 2</a>
-      <a href="./Question no. 3/index.html" target="_blank">Question no. 3</a>
-      <a href="./Question no. 4/index.html" target="_blank">Question no. 4</a>
-      <a href="./Question no. 5/index.html" target="_blank">Question no. 5</a>
-      <a href="./Question no. 6/index.html" target="_blank">Question no. 6</a>
-      <a href="./Question no. 7/index.html" target="_blank">Question no. 7</a>
-      <a href="./Question no. 8/index.html" target="_blank">Question no. 8</a>
-      <a href="./Question no. 9/index.html" target="_blank">Question no. 9</a>
-      <a href="./Question no. 10/index.html" target="_blank">Question no. 10</a>
-      <a href="./Question no. 11/index.html" target="_blank">Question no. 11</a>
-      <a href="Question no. 12/index.html" target="_blank">Question no. 12</a>
-      <a href="Question no. 13 & 14/index.html" target="_blank">Question no. 13 & 14</a>
+    <div id="maindiv">
+      <div class="div1">
+        <a href="./Question no. 1/index.html" target="_blank">Question no. 1</a>
+        <a href="./Question no. 2/index.html" target="_blank">Question no. 2</a>
+        <a href="./Question no. 3/index.html" target="_blank">Question no. 3</a>
+        <a href="./Question no. 4/index.html" target="_blank">Question no. 4</a>
+        <a href="./Question no. 5/index.html" target="_blank">Question no. 5</a>
+        <a href="./Question no. 6/index.html" target="_blank">Question no. 6</a>
+        <a href="./Question no. 7/index.html" target="_blank">Question no. 7</a>
+      </div>
+      <div class="div2">
+        <a href="./Question no. 8/index.html" target="_blank">Question no. 8</a>
+        <a href="./Question no. 9/index.html" target="_blank">Question no. 9</a>
+        <a href="./Question no. 10/index.html" target="_blank"
+          >Question no. 10</a
+        >
+        <a href="./Question no. 11/index.html" target="_blank"
+          >Question no. 11</a
+        >
+        <a href="Question no. 12/index.html" target="_blank">Question no. 12</a>
+        <a href="Question no. 13 & 14/index.html" target="_blank"
+          >Question no. 13 & 14</a
+        >
+        <a href="Question no. 15/index.html" target="_blank">Question no. 15</a>
+      </div>
     </div>
   </body>
 </html>
