Question no.2 Completed

--- a/Question no. 2/index.html
+++ b/Question no. 2/index.html
@@ -17,8 +17,16 @@
         "<h1> Declare an empty array using JS object notation to store <br> student names in future. </h1>"
       );
 
-      var countries = ["Pakistan", "Turkiye", "Russia", "China"];
-      console.log(countries);
+      var bioData = {
+        firstName: "Ahmed ",
+        lastName: "Khan",
+        age: 17,
+        gender: "Male",
+      }
+      console.log (bioData)
+      console.log ( "Full Name: " + bioData.firstName + bioData.lastName)
+      console.log ( "Age: " + bioData.age)
+      console.log ( "Gender: " + bioData.gender)
     </script>
   </body>
 </html>
